TL-120: Fix menu navigation on mobile and menu icon.

--- a/themes/custom/dolciaprima/less/style.less
+++ b/themes/custom/dolciaprima/less/style.less
@@ -808,6 +808,7 @@ body,
   }
   button {
     border: 0;
+    border-radius: 0;
     margin: 20px 10px 0 0;
     @media (min-width: @screen-md) {
       margin: 0 15px 0 0;
