--- a/themes/custom/generic_microsite/less/style.less
+++ b/themes/custom/generic_microsite/less/style.less
@@ -243,7 +243,6 @@ header .search-api-page-block-form {
     font-size: 20px;
     font-weight: bold;
     position: relative;
-    top: 1px;
     @media (min-width: @screen-sm) {
       content: none;
     }
@@ -325,8 +324,10 @@ body {
 }
 
 .btn.icon-before .glyphicon-search {
+  font-size: 11px;
   margin-left: 0;
   margin-right: 5px;
+  top: 0;
 }
 
 #search-block-form,
@@ -644,6 +645,7 @@ body,
   }
   button {
     border: 0;
+    border-radius: 0;
     display: block;
     margin: 0;
     padding: 0;
@@ -2837,7 +2839,8 @@ body {
     }
   }
   .btn.icon-before .glyphicon-search {
-    margin-left: 2px;
+    font-size: 14px;
+    margin-left: 1px;
   }
 }
 
